--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,22 @@
-- name: Github Pages Directory Listing
-  uses: jayanta525/github-pages-directory-listing@v3.0.0
-  with:
-    FOLDER: src
+name: gh-pages
+on: [push]
+
+jobs:
+  pages-directory-listing-index:
+    runs-on: ubuntu-latest
+    name: GH Pages Directory Listing
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate Directory Listings
+        uses: jayanta525/github-pages-directory-listing@v2.0.0
+        with:
+          FOLDER: data
+
+      - name: Deploy to Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: data
