--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,22 +1,36 @@
-name: gh-pages
+name: directory-listing
 on: [push]
 
 jobs:
-  pages-directory-listing-index:
+  pages-directory-listing:
     runs-on: ubuntu-latest
-    name: GH Pages Directory Listing
+    name: Directory Listings Index
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
       - name: Generate Directory Listings
-        uses: jayanta525/github-pages-directory-listing@v2.0.0
+        uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
-          FOLDER: src
+          FOLDER: data      #directory to generate index
 
-      - name: Deploy to Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: src
+          path: 'data'      # upload generated folder
+  
+  deploy:
+    needs: pages-directory-listing
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+    
