--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,6 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Directory Listings Index
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: dummy-data
+          
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
