--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: dummy-data
-          
+          ref: master
+
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
