--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,10 @@ name: directory-listing
 on: [push]
 
 jobs:
+  travis:
+    name: run .travis.yml
+    uses: ktomk/run-travis-yml@v1.8.1
+
   pages-directory-listing:
     runs-on: ubuntu-latest
     name: Directory Listings Index
