--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
+        with:
+          ref: master
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
