--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,7 @@ jobs:
       - name: Upload PDF file
         uses: actions/upload-artifact@v3
         with:
-          name: PDF
-          path: main.pdf
+          path: 'src'
   pages-directory-listing:
     runs-on: ubuntu-latest
     name: Directory Listings Index
