--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v3
         with:
-          ref: gh-pages
+          ref: master
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
@@ -36,6 +36,23 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: 'src'      # upload generated folder
-    needs: build_latex
+    needs: build_latex 
+    deploy:
+      needs: pages-directory-listing
+      permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v1
   
     
