--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,24 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: 'src'
+
+  deploy:
+    needs: build_latex
+
+    permissions:
+      pages: write      
+      id-token: write   
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+
   pages-directory-listing:
     runs-on: ubuntu-latest
     name: Directory Listings Index
@@ -36,22 +54,6 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: 'src'      # upload generated folder
-    needs: build_latex 
-  deploy:
-    needs: pages-directory-listing
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1  
+    needs: deploy 
+   
     
