--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: src_site
+          name: github-pages
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
