--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,13 @@ jobs:
         with:
           working_directory: src
           root_file: main.tex
-      - name: Upload PDF file to gh-pages
+      
+      - name: Generate Directory Listings
+        uses: jayanta525/github-pages-directory-listing@v3.0.0
+        with:
+          FOLDER: src      #directory to generate index
+
+      - name: Upload PDF artifact
         uses: actions/upload-artifact@v3
         with:
           name: src_site
@@ -23,7 +29,7 @@ jobs:
 
   deploy:
     name: Deploy to pages
-    needs: [build_latex pages-directory-listing]
+    needs: [build_latex, pages-directory-listing]
 
     permissions:
       pages: write      
@@ -58,15 +64,7 @@ jobs:
         with:
           ref: gh-pages
 
-      - name: Generate Directory Listings
-        uses: jayanta525/github-pages-directory-listing@v3.0.0
-        with:
-          FOLDER: src      #directory to generate index
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'src'      # upload generated folder
+            # upload generated folder
     needs: deploy 
    
     
