--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
 
   deploy:
     name: Deploy to pages
-    needs: [build_latex, pages-directory-listing]
+    needs: build_latex
 
     permissions:
       pages: write      
