--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           working_directory: src
-          root_file: "*.tex"
+          root_file: "**/*.tex"
           glob_root_file: true
           post_compile: "latexmk -c"
       
