--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,7 @@ jobs:
           root_file: "**/*.tex"
           glob_root_file: true
           post_compile: "latexmk -c"
+          work_in_root_file_dir: true
       
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
