--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
           root_file: "**/*.tex"
           glob_root_file: true
           work_in_root_file_dir: true
-          post_compile: "latexmk -c"
+          post_compile: "latexmk -c;cd tex; latexmk -c"
       
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
