--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
           work_in_root_file_dir: true
           post_compile: "latexmk -c;cd tex; latexmk -c"
       
-      
+            #directory to generate index
 
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v3
@@ -32,12 +32,10 @@ jobs:
             src/tex/*.html
             !src/tex/*.tex
             !src/*.tex
-
-            - name: Generate Directory Listings
+      - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
-          FOLDER: src      #directory to generate index
-            
+          FOLDER: src    
   deploy:
     name: Deploy to pages
     needs: build_latex
